GNOME Bugzilla – Bug 736028
basetextoverlay: cairo transparence setting not needed
Last modified: 2014-09-08 20:28:57 UTC
Created attachment 285334 [details] [review] remove uneeded cairo transparence the code here: http://cgit.freedesktop.org/gstreamer/gst-plugins-base/tree/ext/pango/gstbasetextoverlay.c#n1554 should make transparent the box that contains the text, I think this code is not correct, it should be: if (overlay->want_shading) { double alpha = overlay->shading_value / 255.0; cairo_paint_with_alpha (cr, alpha); } however I think this code could be removed, we already do a shaded background, why shade the box behind the text with cairo too? only one shading is needed so we must shade with cairo or with methods like these: http://cgit.freedesktop.org/gstreamer/gst-plugins-base/tree/ext/pango/gstbasetextoverlay.c#n1642 not both
commit 501a295fa12436ffd2f1abc7105b007ecc9f950a Author: Nicola Murino <nicola.murino@gmail.com> Date: Thu Sep 4 12:13:45 2014 +0200 basetextoverlay: remove unneeded cairo transparence setting he code here: http://cgit.freedesktop.org/gstreamer/gst-plugins-base/tree/ext/pango/gstbasetextoverlay.c#n1554 should make transparent the box that contains the text, I think this code is not correct, it should be: if (overlay->want_shading) { double alpha = overlay->shading_value / 255.0; cairo_paint_with_alpha (cr, alpha); } however I think this code could be removed, we already do a shaded background, why shade the box behind the text with cairo too? only one shading is needed so we must shade with cairo or with methods like these: http://cgit.freedesktop.org/gstreamer/gst-plugins-base/tree/ext/pango/gstbasetextoverlay.c#n1642 not both https://bugzilla.gnome.org/show_bug.cgi?id=736028
can you please push to 1.4 please?